// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="nut-menu"
  >
    <div
      class="nut-menu-bar"
    >
      <div
        class="nut-menu-title nut-menu-title-0"
      >
        <div
          class="nut-menu-title-text"
        >
          全部商品
        </div>
        <svg
          aria-labelledby="ArrowDown"
          class="nut-icon nut-icon-ArrowDown nut-menu-title-icon"
          role="presentation"
          style="width: 12px; height: 12px;"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M187.73 351.57a21.33 21.33 0 0 0 .43 29.66l307.63 307.62c8.32 8.32 21.76 8.32 30.08 0L835.2 379.73c8.53-8.53 8.32-22.19-.43-30.5l-15.36-14.72c-8.32-8.11-21.76-7.89-29.86.21L510.93 613.55 232.96 335.57c-8.53-8.53-22.4-8.32-30.72.43z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="nut-menu-container"
    >
      <div
        class="nut-menu-container-wrap"
        style="display: none;"
      >
        <div
          class="nut-menu-container-content"
        >
          <div
            class="nut-menu-container-item active"
            style="flex-basis: 100%;"
          >
            <i
              class="nut-menu-container-item-icon"
            >
              <svg
                aria-labelledby="Check"
                class="nut-icon nut-icon-Check "
                color=""
                role="presentation"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
                  fill="currentColor"
                />
              </svg>
            </i>
            <div
              class="nut-menu-container-item-title "
            >
              全部商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 100%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              新款商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 100%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              活动商品
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot of two columns in one line 1`] = `
<DocumentFragment>
  <div
    class="nut-menu"
  >
    <div
      class="nut-menu-bar"
    >
      <div
        class="nut-menu-title nut-menu-title-0"
      >
        <div
          class="nut-menu-title-text"
        >
          全部商品
        </div>
        <svg
          aria-labelledby="ArrowDown"
          class="nut-icon nut-icon-ArrowDown nut-menu-title-icon"
          role="presentation"
          style="width: 12px; height: 12px;"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M187.73 351.57a21.33 21.33 0 0 0 .43 29.66l307.63 307.62c8.32 8.32 21.76 8.32 30.08 0L835.2 379.73c8.53-8.53 8.32-22.19-.43-30.5l-15.36-14.72c-8.32-8.11-21.76-7.89-29.86.21L510.93 613.55 232.96 335.57c-8.53-8.53-22.4-8.32-30.72.43z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="nut-menu-container"
    >
      <div
        class="nut-menu-container-wrap"
        style="display: none;"
      >
        <div
          class="nut-menu-container-content"
        >
          <div
            class="nut-menu-container-item active"
            style="flex-basis: 50%;"
          >
            <i
              class="nut-menu-container-item-icon"
            >
              <svg
                aria-labelledby="Check"
                class="nut-icon nut-icon-Check "
                color=""
                role="presentation"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
                  fill="currentColor"
                />
              </svg>
            </i>
            <div
              class="nut-menu-container-item-title "
            >
              全部商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 50%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              新款商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 50%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              活动商品
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
